<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tango Native ROS Streaming</string>
    <string name="app_name_long">Tango Native ROS (Pose and Depth) Streaming</string>
    <string name="text_message">Started Streaming!</string>
    <string name="ROS_MASTER_LBL">ROS Master IPv4 Address</string>
    <string name="ROS_NODE_LBL">ROS Node IPv4 Address</string>
    <string name="ROS_PREFIX_LBL">ROS Prefix</string>
    <string name="ROS_NAMESPACE_LBL">ROS Namespace</string>
    <string name="START_BTN">Start ROS Node</string>
    <string name="tango_addr_error">Unable to determine IP Address</string>
    <string name="STOP_BTN">Stop Streaming</string>
    <string name="ROS_PORT_LBL">Port</string>
    <string name="ROS_MASTER_PREFIX_LBL">ROS Master Prefix</string>

    <string name="edit_new_master_prefix">Enter New Prefix</string>
    <string name="button_back_to_list_master_prefix">Back To List</string>
    <string name="button_new_master_prefix">Set New Prefix</string>

    <string name="edit_new_master_ip">Enter New IP</string>
    <string name="button_back_to_list_master_ip">Back To List</string>
    <string name="button_new_master_ip">Set New IP</string>

    <string name="edit_new_port">Enter New Port</string>
    <string name="button_back_to_list_port">Back To List</string>
    <string name="button_new_port">Set New Port</string>

    <string name="edit_new_node_ip">Enter New IP</string>
    <string name="button_back_to_list_node_ip">Back To List</string>
    <string name="button_new_node_ip">Set New IP</string>

    <string name="edit_new_ros_prefix">Enter New Prefix</string>
    <string name="button_back_to_list_ros_prefix">Back To List</string>
    <string name="button_new_ros_prefix">Set New Prefix</string>

    <string name="edit_new_namespace">Enter New Namespace</string>
    <string name="button_back_to_list_namespace">Back To List</string>
    <string name="button_new_namespace">Set New Namespace</string>
</resources>
