<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ROS_MASTER_PREFIX_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ROS_MASTER_PREFIX_LBL" />
        <Spinner
            android:id="@+id/MASTER_PREFIX_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <EditText
            android:id="@+id/MASTER_PREFIX_EDIT"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/edit_new_master_prefix" />
        <Button
            android:id="@+id/NEW_MASTER_PREFIX_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enterNewMasterPrefix"
            android:text="@string/button_new_master_prefix" />
        <Button
            android:id="@+id/BACK_TO_LIST_MASTER_PREFIX_BTN"
            android:visibility = "gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="backToListMasterPrefix"
            android:text="@string/button_back_to_list_master_prefix" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/ROS_MASTER_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ROS_MASTER_LBL" />
        <Spinner
            android:id="@+id/MASTER_IP_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <EditText
            android:id="@+id/MASTER_IP_EDIT"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/edit_new_master_ip" />
        <Button
            android:id="@+id/NEW_MASTER_IP_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enterNewMasterIP"
            android:text="@string/button_new_master_ip" />
        <Button
            android:id="@+id/BACK_TO_LIST_MASTER_IP_BTN"
            android:visibility = "gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="backToListMasterIP"
            android:text="@string/button_back_to_list_master_ip" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/ROS_PORT_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ROS_PORT_LBL" />
        <Spinner
            android:id="@+id/PORT_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <EditText
            android:id="@+id/PORT_EDIT"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/edit_new_port" />
        <Button
            android:id="@+id/NEW_PORT_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enterNewPort"
            android:text="@string/button_new_port" />
        <Button
            android:id="@+id/BACK_TO_LIST_PORT_BTN"
            android:visibility = "gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="backToListPort"
            android:text="@string/button_back_to_list_port" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/ROS_NODE_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ROS_NODE_LBL" />
        <Spinner
            android:id="@+id/NODE_IP_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <EditText
            android:id="@+id/NODE_IP_EDIT"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/edit_new_node_ip" />
        <Button
            android:id="@+id/NEW_NODE_IP_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enterNewNodeIP"
            android:text="@string/button_new_node_ip" />
        <Button
            android:id="@+id/BACK_TO_LIST_NODE_IP_BTN"
            android:visibility = "gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="backToListNodeIP"
            android:text="@string/button_back_to_list_node_ip" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/ROS_PREFIX_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ROS_PREFIX_LBL" />
        <Spinner
            android:id="@+id/ROS_PREFIX_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <EditText
            android:id="@+id/ROS_PREFIX_EDIT"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/edit_new_ros_prefix" />
        <Button
            android:id="@+id/NEW_ROS_PREFIX_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enterNeRosPrefix"
            android:text="@string/button_new_ros_prefix" />
        <Button
            android:id="@+id/BACK_TO_LIST_ROS_PREFIX_BTN"
            android:visibility = "gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="backToListRosPrefix"
            android:text="@string/button_back_to_list_ros_prefix"  />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/ROS_NAMESPACE_LBL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ROS_NAMESPACE_LBL" />
        <Spinner
            android:id="@+id/NAMESPACE_SPINNER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"/>
        <EditText
            android:id="@+id/NAMESPACE_EDIT"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:text="@string/edit_new_namespace" />
        <Button
            android:id="@+id/NEW_NAMESPACE_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="enterNewNamespace"
            android:text="@string/button_new_namespace" />
        <Button
            android:id="@+id/BACK_TO_LIST_NAMESPACE_BTN"
            android:visibility = "gone"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="backToListNamespace"
            android:text="@string/button_back_to_list_namespace" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/START_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startStreaming"
            android:text="@string/START_BTN" />
    </TableRow>
</TableLayout>